tests/ui/pass/refine_sig.rs
//@check-pass

#[thrust_macros::sig(fn(x: { v: i32 | v > 0 }) -> { r: i32 | r >= x })]
fn g(x: i32) -> i32 {
    x
}

fn main() {}
